fix overflow y scrollbar

--- a/apps/client/src/Pages/dashboard/Editor/main/main.css
+++ b/apps/client/src/Pages/dashboard/Editor/main/main.css
@@ -9,6 +9,11 @@
   justify-content: space-between;
   position: relative;
 }
+
+::-webkit-scrollbar {
+  width: 1px;
+  background-color: red;
+}
 .home-explorer-and-layers-files {
   flex: 0 0 auto;
   max-width: 256px;
